--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "license": "ISC",
   "dependencies": {
-    "nan": "^2.12.1"
+    "nan": "^2.14.0",
+    "node-gyp": "^6.0.1"
   },
   "devDependencies": {
-    "tree-sitter-cli": "^0.15.7"
+    "tree-sitter-cli": "^0.15.12"
   }
 }
