--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tree-sitter-4dm",
   "version": "0.0.6",
   "description": "Tree-sitter parser for 4D",
-  "main": "index.js",
   "scripts": {
     "build": "tree-sitter generate && node-gyp build",
     "test": "tree-sitter test"
@@ -15,10 +14,10 @@
   },
   "license": "ISC",
   "dependencies": {
-    "nan": "^2.14.0",
-    "node-gyp": "^6.0.1"
+    "nan": "*",
+    "node-gyp": "*"
   },
   "devDependencies": {
-    "tree-sitter-cli": "^0.15.12"
+    "tree-sitter-cli": "*"
   }
 }
